[gd_scene load_steps=4 format=3 uid="uid://b84jqg6v7ev0v"]

[ext_resource type="Script" path="res://scenes/player/gun/gun.gd" id="1_51xk5"]
[ext_resource type="PackedScene" uid="uid://cca6nf5b5ckt4" path="res://scenes/player/gun/gun_effects.tscn" id="2_1lasm"]
[ext_resource type="PackedScene" uid="uid://bnmehxycglo2" path="res://assets/models/guns/colt_python.blend" id="3_rkq8b"]

[node name="Gun" type="Node3D" node_paths=PackedStringArray("gun_model")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.25, -0.5)
script = ExtResource("1_51xk5")
gun_model = NodePath("ColtPython")

[node name="FireTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="RevTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tx8a1")
}
autoplay = "idle"
playback_default_blend_time = 1.0

[node name="ShootSFX" type="AudioStreamPlayer" parent="."]

[node name="ReloadSFX" type="AudioStreamPlayer" parent="."]

[node name="ShootRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.5, -0.25)
target_position = Vector3(0, -2, 0)
collision_mask = 3

[node name="ColtPython" parent="." instance=ExtResource("3_rkq8b")]
transform = Transform3D(8.74228e-08, -4.37114e-08, -1, 1, 4.37114e-08, 8.74228e-08, 4.37114e-08, -1, 4.37114e-08, 0, 0, 0)

[node name="GunEffects" parent="ColtPython" instance=ExtResource("2_1lasm")]
transform = Transform3D(-4.37114e-09, -0.1, 4.37114e-09, 0, -4.37114e-09, -0.1, 0.1, -4.37114e-09, 1.91069e-16, -0.172402, 0.160341, -1.19209e-07)

[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="RevTimer" to="." method="_on_rev_timer_timeout"]
